added hero section

--- a/homeworks/vladyslav.kovalov_kovalov/6-adaptive/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/6-adaptive/index.html
@@ -24,5 +24,34 @@
                 </button>
             </div>
         </header>
+        <section class="hero-section">
+            <div class="hero-section__container page-container">
+                <div class="hero-section__information">
+                    <h1 class="hero-section__title">
+                        Delivery is Process
+                        Going From Source Point to Predefined Destination.
+                    </h1>
+                    <p class="hero-section__lead">
+                        Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.
+                    </p>
+                    <form class="hero-section__tracking-form">
+                        <input type="text" class="hero-section__tracking-form-input"
+                            placeholder="Type your tracking number">
+                        <button class="hero-section__tracking-form-button button" type="button">Track Percel</button>
+                    </form>
+                </div>
+                <img src="img/bonik-hero-image.png" alt="Delivery guy on scooter" class="hero-section__image">
+            </div>
+        </section>
+        <section class="section-features">
+            <div class="section-features__container page-container">
+                <h2 class="section-features__title">
+                    Why Choose Us?
+                </h2>
+                <p class="section-features__lead">
+                    Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.
+                </p>
+            </div>
+        </section>
     </body>
 </html>
