added offers block

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
@@ -7,31 +7,46 @@
         <link rel="stylesheet" href="style_adaptive.css">
     </head>
     <body>
-        <div class="page">
-            <div class="page__top">
-                <div class="page__top_textfield">
-                    <div class="page__top_textfield-text-big">
+        <main class="page">
+            <div class="page__track">
+                <div class="page__track_textfield">
+                    <div class="page__track_textfield-text-big">
                         <b>Delivery is Process</b>
                     </div>
-                    <div class="page__top_textfield-text-big">
+                    <div class="page__track_textfield-text-big">
                         <b>Going From Source Point to</b>
                     </div>
-                    <div class="page__top_textfield-text-big">
+                    <div class="page__track_textfield-text-big">
                         <b>Predefined Destination</b>
                     </div>
                     <br>
                     <br>
-                    <div class="page__top_textfield-text-small">Need to send something on time? Delivery is process of transporting goods</div>
-                    <div class="page__top_textfield-text-small">from a source location to predefined destination</div>
+                    <div class="page__track_textfield-text-small">Need to send something on time? Delivery is process of transporting goods</div>
+                    <div class="page__track_textfield-text-small">from a source location to predefined destination</div>
                     <br>
                     <br>
-                    <div class="page__top_inputfield">
-                        <input type="text" placeholder="Type your tracking number" class="page__top_inputfield-input">
-                        <button type="button" class="page__top_inputfield-button">Track Parcel</button>
+                    <div class="page__track_inputfield">
+                        <input type="text" placeholder="Type your tracking number" class="page__track_inputfield-input">
+                        <button type="button" class="page__track_inputfield-button">Track Parcel</button>
                     </div>
                 </div>
-                <img src="images/1x/bonik_left_1x.png" alt="" class="page__top-bonik">
+                <img src="images/1x/bonik_left_1x.png" alt="" class="page__track-bonik">
             </div>
-        </div>
+            <h2 class="page__title">Why Choose Us?</h2>
+            <div class="page__text">Need to send something on time? Delivery is process of transporting goods</div>
+            <div class="page__text">from a source location to predefined destination</div>
+            <div class="page"></div>
+            <div class="page__offers">
+                <div class="page__offers-block page__offers-block-color-a"></div>
+                <div class="page__offers-block page__offers-block-color-b"></div>
+                <div class="page__offers-block page__offers-block-color-c"></div>
+                <div class="page__offers-block page__offers-block-color-b"></div>
+                <div class="page__offers-block page__offers-block-color-c"></div>
+                <div class="page__offers-block page__offers-block-color-a"></div>
+                <div class="page__offers-block page__offers-block-color-c"></div>
+                <div class="page__offers-block page__offers-block-color-b"></div>
+                <div class="page__offers-block page__offers-block-color-a"></div>
+            </div>
+        </main>
     </body>
 </html>
