added block page__apply

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
@@ -30,12 +30,11 @@
                         <button type="button" class="page__track_inputfield-button">Track Parcel</button>
                     </div>
                 </div>
-                <img src="images/1x/bonik_left_1x.png" alt="" class="page__track-bonik">
+                <img src="images/1x/bonik_left_1x.png" alt="" class="page__bonik">
             </div>
             <h2 class="page__title">Why Choose Us?</h2>
             <div class="page__text">Need to send something on time? Delivery is process of transporting goods</div>
             <div class="page__text">from a source location to predefined destination</div>
-            <div class="page"></div>
             <div class="page__offers">
                 <div class="page__offers-block page__offers-block-color-a"></div>
                 <div class="page__offers-block page__offers-block-color-b"></div>
@@ -46,6 +45,16 @@
                 <div class="page__offers-block page__offers-block-color-c"></div>
                 <div class="page__offers-block page__offers-block-color-b"></div>
                 <div class="page__offers-block page__offers-block-color-a"></div>
+            </div>
+            <div class="page__apply">
+                <img src="images/1x/bonik_right_1x.png" alt="" class="page__bonik">
+                <div class="page__apply-aside">
+                    <h2 class="page__title">Apply for Ambassador</h2>
+                    <div class="page__apply-aside-lines">Need to send something on time? Delivery is process of</div>
+                    <div class="page__apply-aside-lines">transporting goods from a source location to</div>
+                    <div class="page__apply-aside-lines">predefined destination</div>
+                    <button type="button" class="page__apply-aside-button">Apply Now</button>
+                </div>
             </div>
         </main>
     </body>
