--- a/homeworks/maksym.selenkov_MaksymSelenkov/6-adaptive/index.html
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/6-adaptive/index.html
@@ -15,7 +15,7 @@
                         <img src="./images/bonik%20delivery%20logo.svg" alt="logo">
                     </a>
                 </section>
-                <section class="header__menu menu">
+                <nav class="header__menu menu">
                     <div class="menu__phone">
                         <img src="./images/phone.svg" alt="phone">
                         <a class="menu__phone-number" href="tel:+08801877576457">+08801877576457</a>
@@ -25,12 +25,14 @@
                         <img src="./images/ball.svg" alt="language">
                         <button class="menu__language-bar" type="button">EN</button>
                     </div>
-                </section>
+                </nav>
             </header>
             <main>
                 <section class="page">
                     <section class="page__heading heading">
-                        <h1 class="heading__title">Delivery is Process Going From Source Point to Predefined Destination.</h1>
+                        <h1 class="heading__title">
+                            Delivery is Process <br> Going From Source Point to Predefined Destination.
+                        </h1>
                         <p class="heading__text">Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.</p>
                         <div class="heading__form">
                             <input class="heading__input" type="text" placeholder="Type your tracking number">
@@ -38,7 +40,7 @@
                         </div>
                     </section>
                     <picture class="page__picture">
-                        <source srcset="./images/bonik delivery img 1@2x.png" media="(min-width: 1440px)">
+                        <source srcset="./images/bonik delivery img 1@2x.png 2x">
                         <img src="./images/bonik%20delivery%20img%201.png" alt="bonik">
                     </picture>
                 </section>
@@ -97,23 +99,23 @@
                 </section>
                 <section class="apply">
                     <picture class="apply__picture">
-                        <source srcset="./images/bonik delivery img 02 1@2x.png" media="(min-width: 1440px)">
+                        <source srcset="./images/bonik delivery img 02 1@2x.png 2x">
                         <img src="./images/bonik%20delivery%20img%2002%201.png" alt="bonik">
                     </picture>
-                    <section class="apply__heading section__heading">
-                        <h2 class="section__title">Apply for Ambassador</h2>
+                    <section class="apply__heading">
+                        <h2 class="apply__title">Apply for Ambassador</h2>
                         <p class="section__text">Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.</p>
-                        <button class="menu__button" type="button">Apply Now</button>
+                        <button class="apply__button" type="button">Apply Now</button>
                     </section>
                 </section>
                 <section class="news">
                     <section class="news__heading section__heading">
-                        <h2 class="section__title">Company News Our Latest Artical & Tips for You</h2>
+                        <h2 class="section__title">Company News Our Latest Artical </br> & Tips for You</h2>
                     </section>
                     <article class="news__items">
                         <div class="news__item article">
                             <picture class="article__picture">
-                                <source srcset="./images/Rectangle 21@2x.png" media="(min-width: 1440px)">
+                                <source srcset="./images/Rectangle 21@2x.png 2x">
                                 <img src="./images/Rectangle%2021.png" alt="bonik">
                             </picture>
                             <div class="article__under-picture under-picture">
@@ -131,7 +133,7 @@
                         </div>
                         <div class="news__item article">
                             <picture class="article__picture">
-                                <source srcset="./images/Rectangle 22@2x.png" media="(min-width: 1440px)">
+                                <source srcset="./images/Rectangle 22@2x.png 2x">
                                 <img src="./images/Rectangle%2022.png" alt="bonik">
                             </picture>
                             <div class="article__under-picture under-picture">
@@ -149,7 +151,7 @@
                         </div>
                         <div class="news__item article">
                             <picture class="article__picture">
-                                <source srcset="./images/Rectangle 20@2x.png" media="(min-width: 1440px)">
+                                <source srcset="./images/Rectangle 20@2x.png 2x">
                                 <img src="./images/Rectangle%2020.png" alt="bonik">
                             </picture>
                             <div class="article__under-picture under-picture">
@@ -182,7 +184,34 @@
                 </section>
             </main>
             <footer class="footer">
-
+                <section class="footer__info">
+                    <div class="footer__about about">
+                        <img class="about__title" src="./images/bonik%20delivery%20logo.svg" alt="logo">
+                        <p class="about__text">10/B, House# 32, Dhaka Uddan Mohammadpur, Dhaka, Bangladesh</p>
+                        <div class="about__socials">
+                            <img src="./images/socials.svg" alt="socials">
+                        </div>
+                    </div>
+                    <div class="footer__menu">
+                        <nav class="footer__links">
+                            <h3 class="links__title">Important links</h3>
+                            <a class="footer__link" href="">FAQs</a>
+                            <a class="footer__link" href="">Blogs</a>
+                            <a class="footer__link" href="">Privacy Policy</a>
+                            <a class="footer__link" href="">Trims & Conditions</a>
+                        </nav>
+                        <nav class="footer__policy">
+                            <h3 class="policy__title">Policy</h3>
+                            <a class="footer__link" href="">Learner</a>
+                            <a class="footer__link" href="">Partners</a>
+                            <a class="footer__link" href="">Developers</a>
+                            <a class="footer__link" href="">Teaching Centre</a>
+                        </nav>
+                    </div>
+                </section>
+                <section class="copyright">
+                    <p class="copyright__text">Copyright @2021 Bonik Delivery</p>
+                </section>
             </footer>
         </div>
     </body>
