--- a/homeworks/maksym.selenkov_MaksymSelenkov/6-adaptive/index.html
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/6-adaptive/index.html
@@ -104,7 +104,7 @@
                     </picture>
                     <section class="apply__heading">
                         <h2 class="apply__title">Apply for Ambassador</h2>
-                        <p class="section__text">Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.</p>
+                        <p class="apply__text">Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.</p>
                         <button class="apply__button" type="button">Apply Now</button>
                     </section>
                 </section>
