--- a/homeworks/vladyslav.kovalov_kovalov/6-adaptive/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/6-adaptive/index.html
@@ -12,14 +12,14 @@
             <div class="main-header__container page-container">
                 <img src="img/bonik-logo.svg" alt="" class="main-header__logo">
                 <div class="main-header__tel">
-                    <img src="img/tel-icon.svg" alt="phone icon" class="main-header__icon">
+                    <img src="img/icons/tel-icon.svg" alt="phone icon" class="main-header__icon">
                     <a href="tel:+08801877576457" class="main-header__link">+088 01877576457</a>
                 </div>
                 <button class="main-header__button button button--action button--sign-in" type="button">
                     Sign In
                 </button>
-                <button class="main-header__button button button--language-switcher" type="button">
-                    <img src="img/lang-icon.svg" alt="" class="button__icon">
+                <button class="main-header__button main-header__button--language-switcher button button--language-switcher" type="button">
+                    <img src="img/icons/lang-icon.svg" alt="" class="button__icon">
                     EN
                 </button>
             </div>
@@ -40,18 +40,295 @@
                         <button class="hero-section__tracking-form-button button" type="button">Track Percel</button>
                     </form>
                 </div>
-                <img src="img/bonik-hero-image.png" alt="Delivery guy on scooter" class="hero-section__image">
+                <picture class="hero-section__image">
+                    <source srcset="img/lg-images/bonik-hero-image-x2.png 2x">
+                    <img src="img/lg-images/bonik-hero-image.png" alt="Delivery guy on scooter">
+                </picture>
             </div>
         </section>
-        <section class="section-features">
-            <div class="section-features__container page-container">
-                <h2 class="section-features__title">
+        <section class="features-section">
+            <div class="features-section__container page-container">
+                <h2 class="features-section__title">
                     Why Choose Us?
                 </h2>
-                <p class="section-features__lead">
+                <p class="features-section__lead">
                     Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.
                 </p>
+                <div class="features-section__cards-container">
+                    <div class="features-section__card feature-card">
+                        <img src="img/icons/feature-1-icon.svg" alt="Lead tech icon" class="feature-card__icon">
+                        <h3 class="feature-card__title">
+                            Industry-leading tech
+                        </h3>
+                        <p class="feature-card__description">
+                            Delivery is process of transporting from source point to predefined destination.
+                        </p>
+                    </div>
+                    <div class="features-section__card feature-card">
+                        <img src="img/icons/feature-2-icon.svg" alt="Lead tech icon" class="feature-card__icon">
+                        <h3 class="feature-card__title">
+                            Nationwide coverage
+                        </h3>
+                        <p class="feature-card__description">
+                            Delivery is process of transporting from source point to predefined destination.
+                        </p>
+                    </div>
+                    <div class="features-section__card feature-card">
+                        <img src="img/icons/feature-3-icon.svg" alt="Lead tech icon" class="feature-card__icon">
+                        <h3 class="feature-card__title">
+                            Fastest Delivery
+                        </h3>
+                        <p class="feature-card__description">
+                            Delivery is process of transporting from source point to predefined destination.
+                        </p>
+                    </div>
+                    <div class="features-section__card feature-card">
+                        <img src="img/icons/feature-4-icon.svg" alt="Lead tech icon" class="feature-card__icon">
+                        <h3 class="feature-card__title">
+                            Next day payment
+                        </h3>
+                        <p class="feature-card__description">
+                            Delivery is process of transporting from source point to predefined destination.
+                        </p>
+                    </div>
+                    <div class="features-section__card feature-card">
+                        <img src="img/icons/feature-5-icon.svg" alt="Lead tech icon" class="feature-card__icon">
+                        <h3 class="feature-card__title">
+                            Best COD rates
+                        </h3>
+                        <p class="feature-card__description">
+                            Delivery is process of transporting from source point to predefined destination.
+                        </p>
+                    </div>
+                    <div class="features-section__card feature-card">
+                        <img src="img/icons/feature-6-icon.svg" alt="Lead tech icon" class="feature-card__icon">
+                        <h3 class="feature-card__title">
+                            Secure handling
+                        </h3>
+                        <p class="feature-card__description">
+                            Delivery is process of transporting from source point to predefined destination.
+                        </p>
+                    </div>
+                    <div class="features-section__card feature-card">
+                        <img src="img/icons/feature-7-icon.svg" alt="Lead tech icon" class="feature-card__icon">
+                        <h3 class="feature-card__title">
+                            Product insurance
+                        </h3>
+                        <p class="feature-card__description">
+                            Delivery is process of transporting from source point to predefined destination.
+                        </p>
+                    </div>
+                    <div class="features-section__card feature-card">
+                        <img src="img/icons/feature-8-icon.svg" alt="Lead tech icon" class="feature-card__icon">
+                        <h3 class="feature-card__title">
+                            Verified Products
+                        </h3>
+                        <p class="feature-card__description">
+                            Delivery is process of transporting from source point to predefined destination.
+                        </p>
+                    </div>
+                    <div class="features-section__card feature-card">
+                        <img src="img/icons/feature-9-icon.svg" alt="Lead tech icon" class="feature-card__icon">
+                        <h3 class="feature-card__title">
+                            Realtime Monitoring
+                        </h3>
+                        <p class="feature-card__description">
+                            Delivery is process of transporting from source point to predefined destination.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
+        <section class="apply-section">
+            <div class="apply-section__container page-container">
+                <picture class="apply-section__image">
+                    <source srcset="img/lg-images/bonik-hero-image-reversed-x2.png 2x">
+                    <img src="img/lg-images/bonik-hero-image-reversed.png" alt="Delivery guy on scooter">
+                </picture>
+                <div class="apply-section__information">
+                    <h2 class="apply-section__title">
+                        Apply for Ambassador
+                    </h2>
+                    <p class="apply-section__lead">
+                        Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.
+                    </p>
+                    <button class="apply-section__button button button--action" type="button">
+                        Apply Now
+                    </button>
+                </div>
+            </div>
+        </section>
+        <section class="news-section">
+            <div class="news-section__container page-container">
+                <h2 class="news-section__title">
+                    Company News Our Latest Artical & Tips for You
+                </h2>
+                <div class="news-section__articles-container">
+                    <div class="article-card">
+                        <img src="img/lg-images/article-1.jpg" alt="Photo of laptop" class="article-card__image">
+                        <div class="article-card__category">
+                            UI / UX Design
+                            <span class="article-card__views">
+                                <img src="img/icons/views-eye-icon.svg" alt="" class="article-card__icon">
+                                <span class="article-card__counter">12450</span>
+                            </span>
+                        </div>
+                        <h3 class="article-card__title">
+                            Our UX studio digitally transforms business through design
+                        </h3>
+                        <p class="article-card__description">
+                            All of these problems are addressable through UX and gamification in particular. That’s not to say that it’s a cure-all.
+                        </p>
+                        <a href="#" class="article-card__link">
+                            Learn More
+                            <img src="img/icons/arrow-icon.svg" alt="" class="article-card__arrow-icon">
+                        </a>
+                    </div>
+                    <div class="article-card">
+                        <img src="img/lg-images/article-2.jpg" alt="Photo of dashboard on laptop" class="article-card__image">
+                        <div class="article-card__category">
+                            Apps Design
+                            <span class="article-card__views">
+                                <img src="img/icons/views-eye-icon.svg" alt="" class="article-card__icon">
+                                <span class="article-card__counter">2953</span>
+                            </span>
+                        </div>
+                        <h3 class="article-card__title">
+                            Your customer do need comprehensive course to learn how to use your app.
+                        </h3>
+                        <p class="article-card__description">
+                            Let’s be honest. Finance isn’t exactly pinnacle fun.Online companies introduced gamification elements to their products reach up to a 700% increase in conversion rates.
+                        </p>
+                        <a href="#" class="article-card__link">
+                            Learn More
+                            <img src="img/icons/arrow-icon.svg" alt="" class="article-card__arrow-icon">
+                        </a>
+                    </div>
+                    <div class="article-card">
+                        <img src="img/lg-images/article-3.jpg" alt="Photo of mobile phone app" class="article-card__image">
+                        <div class="article-card__category">
+                            Product Experience
+                            <span class="article-card__views">
+                                <img src="img/icons/views-eye-icon.svg" alt="" class="article-card__icon">
+                                <span class="article-card__counter">7980</span>
+                            </span>
+                        </div>
+                        <h3 class="article-card__title">
+                            Scale your startup through exceptional product experience
+                        </h3>
+                        <p class="article-card__description">
+                            Our UX design agency creates solutions to address product usability conversion rates an the ever-present challenges of user-retention & engagement.
+                        </p>
+                        <a href="#" class="article-card__link">
+                            Learn More
+                            <img src="img/icons/arrow-icon.svg" alt="" class="article-card__arrow-icon">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="clients-section">
+            <div class="clients-section__container page-container">
+                <h2 class="clients-section__title">
+                    Our Clients
+                </h2>
+                <div class="clients-section__row">
+                    <img src="img/company-logos/google-logo.svg" alt="Google Logo" class="clients-section__company-logo">
+                    <img src="img/company-logos/microsoft-logo.svg" alt="Microsoft Logo" class="clients-section__company-logo">
+                    <img src="img/company-logos/flickr-logo.svg" alt="Flickr Logo" class="clients-section__company-logo">
+                    <img src="img/company-logos/slack-logo.svg" alt="Slack Logo" class="clients-section__company-logo">
+                    <img src="img/company-logos/syngenta-logo.svg" alt="Syngenta Logo" class="clients-section__company-logo">
+                    <img src="img/company-logos/merck-logo.svg" alt="Merck Logo" class="clients-section__company-logo">
+                </div>
+            </div>
+        </section>
+        <footer class="main-footer">
+            <div class="main-footer__container page-container">
+                <div class="main-footer__company-info">
+                    <img src="img/bonik-logo.svg" alt="Company logo" class="main-footer__logo">
+                    <address class="main-footer__company-address">
+                        10/B, House# 32, Dhaka Uddan
+                        Mohammadpur, Dhaka, Bangladesh
+                    </address>
+                    <div class="main-footer__social-links">
+                        <a href="#" class="main-footer__social-link">
+                            <img src="img/icons/facebook-social-icon.svg" alt="Facebook social icon" class="main-footer__social-link-icon">
+                        </a>
+                        <a href="#" class="main-footer__social-link">
+                            <img src="img/icons/linkedin-social-icon.svg" alt="Facebook social icon" class="main-footer__social-link-icon">
+                        </a>
+                        <a href="#" class="main-footer__social-link">
+                            <img src="img/icons/twitter-social-icon.svg" alt="Facebook social icon" class="main-footer__social-link-icon">
+                        </a>
+                        <a href="#" class="main-footer__social-link">
+                            <img src="img/icons/pinterest-social-icon.svg" alt="Facebook social icon" class="main-footer__social-link-icon">
+                        </a>
+                        <a href="#" class="main-footer__social-link">
+                            <img src="img/icons/instagram-social-icon.svg" alt="Facebook social icon" class="main-footer__social-link-icon">
+                        </a>
+                    </div>
+                </div>
+                <div class="main-footer__links">
+                    <h3 class="main-footer__subtitle">
+                        Important links
+                    </h3>
+                    <ul class="main-footer__list">
+                        <li class="main-footer__list-item">
+                            <a href="#" class="main-footer__list-item-link">
+                                FAQs
+                            </a>
+                        </li>
+                        <li class="main-footer__list-item">
+                            <a href="#" class="main-footer__list-item-link">
+                                Blogs
+                            </a>
+                        </li>
+                        <li class="main-footer__list-item">
+                            <a href="#" class="main-footer__list-item-link">
+                                Privacy Policy
+                            </a>
+                        </li>
+                        <li class="main-footer__list-item">
+                            <a href="#" class="main-footer__list-item-link">
+                                Terms & Conditions
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="main-footer__policy">
+                    <h3 class="main-footer__subtitle">
+                        Policy
+                    </h3>
+                    <ul class="main-footer__list">
+                        <li class="main-footer__list-item">
+                            <a href="#" class="main-footer__list-item-link">
+                                Learner
+                            </a>
+                        </li>
+                        <li class="main-footer__list-item">
+                            <a href="#" class="main-footer__list-item-link">
+                                Partners
+                            </a>
+                        </li>
+                        <li class="main-footer__list-item">
+                            <a href="#" class="main-footer__list-item-link">
+                                Developers
+                            </a>
+                        </li>
+                        <li class="main-footer__list-item">
+                            <a href="#" class="main-footer__list-item-link">
+                                Teaching Centre
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+            <div class="main-footer__copyright-container">
+                <p class="main-footer__copyright-text">
+                    Copyright @2021 Bonik Delivery
+                </p>
+            </div>
+        </footer>
     </body>
 </html>
