--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
@@ -56,6 +56,51 @@
                     <button type="button" class="page__apply-aside-button">Apply Now</button>
                 </div>
             </div>
+            <h2 class="page__title">Company News Our Latest Article & Tips for You</h2>
+            <div class="page__news">
+                <div class="page__news-block">
+                    <img src="images/1x/Rectangle21.png" alt="">
+                    <div class="page__news-block-big">
+                        <b>Our UX Studio digitally transforms</b>
+                    </div>
+                    <div class="page__news-block-big">
+                        <b>business through design</b>
+                    </div>
+                    <article class="page__news-block-text">All of these problems are addressable trough UX and gamification in partucular. That is not to say that it is a cure-all.</article>
+                    <br>
+                    <p>
+                        <a href="#">Learn more</a>
+                    </p>
+                </div>
+                <div class="page__news-block">
+                    <img src="images/1x/Rectangle22.png" alt="">
+                    <div class="page__news-block-big">
+                        <b>Your customer do need comprehensive</b>
+                    </div>
+                    <div class="page__news-block-big">
+                        <b>course to learn how to use your app.</b>
+                    </div>
+                    <article class="page__news-block-text">Let's be honest. Finance is not exactly pennacle fun. Online companies introduced gamification elements to their product reach up to a 700% icrease in conversion rates</article>
+                    <p>
+                        <a href="#">Learn more</a>
+                    </p>
+                </div>
+                <div class="page__news-block">
+                    <img src="images/1x/Rectangle20.png" alt="">
+                    <div class="page__news-block-big">
+                        <b>Scale your startup through exceptional</b>
+                    </div>
+                    <div class="page__news-block-big">
+                        <b>product experience</b>
+                    </div>
+                    <article class="page__news-block-text">Our UX design agency creates solution to address product usability convresion rates an the ever-present chalenges of user-retention and engagement</article>
+                    <br>
+                    <p>
+                        <a href="#">Learn more</a>
+                    </p>
+                </div>
+            </div>
+            <img src="images/1x/Group727.png" alt="" class="page__clients">
         </main>
     </body>
 </html>
