--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="style_adaptive.css">
     </head>
     <body>
+        <header>
+            <img src="images/1x/Group7.png" alt="">
+        </header>
         <main class="page">
             <div class="page__track">
                 <div class="page__track_textfield">
@@ -72,35 +75,69 @@
                         <a href="#">Learn more</a>
                     </p>
                 </div>
-                <div class="page__news-block">
-                    <img src="images/1x/Rectangle22.png" alt="">
-                    <div class="page__news-block-big">
-                        <b>Your customer do need comprehensive</b>
-                    </div>
-                    <div class="page__news-block-big">
-                        <b>course to learn how to use your app.</b>
-                    </div>
-                    <article class="page__news-block-text">Let's be honest. Finance is not exactly pennacle fun. Online companies introduced gamification elements to their product reach up to a 700% icrease in conversion rates</article>
-                    <p>
-                        <a href="#">Learn more</a>
-                    </p>
-                </div>
-                <div class="page__news-block">
-                    <img src="images/1x/Rectangle20.png" alt="">
-                    <div class="page__news-block-big">
-                        <b>Scale your startup through exceptional</b>
-                    </div>
-                    <div class="page__news-block-big">
-                        <b>product experience</b>
-                    </div>
-                    <article class="page__news-block-text">Our UX design agency creates solution to address product usability convresion rates an the ever-present chalenges of user-retention and engagement</article>
-                    <br>
-                    <p>
-                        <a href="#">Learn more</a>
-                    </p>
-                </div>
             </div>
-            <img src="images/1x/Group727.png" alt="" class="page__clients">
+            <div class="page__news-block">
+                <img src="images/1x/Rectangle22.png" alt="">
+                <div class="page__news-block-big">
+                    <b>Your customer do need comprehensive</b>
+                </div>
+                <div class="page__news-block-big">
+                    <b>course to learn how to use your app.</b>
+                </div>
+                <article class="page__news-block-text">Let's be honest. Finance is not exactly pennacle fun. Online companies introduced gamification elements to their product reach up to a 700% icrease in conversion rates</article>
+                <p>
+                    <a href="#">Learn more</a>
+                </p>
+            </div>
+            <div class="page__news-block">
+                <img src="images/1x/Rectangle20.png" alt="">
+                <div class="page__news-block-big">
+                    <b>Scale your startup through exceptional</b>
+                </div>
+                <div class="page__news-block-big">
+                    <b>product experience</b>
+                </div>
+                <article class="page__news-block-text">Our UX design agency creates solution to address product usability convresion rates an the ever-present chalenges of user-retention and engagement</article>
+                <br>
+                <p>
+                    <a href="#">Learn more</a>
+                </p>
+            </div>
         </main>
+        <img src="images/1x/Group727.png" alt="" class="page__clients">
+        <footer class="page__bottom">
+            <img src="images/1x/Group733.png" alt="" class="page__bottom-image">
+            <div>
+                <ul class="page__bottom-list">Important Links</ul>
+                <li class="page__bottom-list-items">
+                    <a class="page__bottom-list-links" href="#">FAQs</a>
+                </li>
+                <li class="page__bottom-list-items">
+                    <a class="page__bottom-list-links" href="#">Blogs</a>
+                </li>
+                <li class="page__bottom-list-items">
+                    <a class="page__bottom-list-links" href="#">Privacy Policy</a>
+                </li>
+                <li class="page__bottom-list-items">
+                    <a class="page__bottom-list-links" href="#">Trims & Conditions</a>
+                </li>
+            </div>
+            <div>
+                <ul class="page__bottom-list">Policy</ul>
+                <li class="page__bottom-list-items">
+                    <a class="page__bottom-list-links" href="#">Learner</a>
+                </li>
+                <li class="page__bottom-list-items">
+                    <a class="page__bottom-list-links" href="#">Partners</a>
+                </li>
+                <li class="page__bottom-list-items">
+                    <a class="page__bottom-list-links" href="#">Developers</a>
+                </li>
+                <li class="page__bottom-list-items">
+                    <a class="page__bottom-list-links" href="#">Teaching center</a>
+                </li>
+            </div>
+        </footer>
+        <div class="page-copyright">Copyright @2021 Bonik Delivery</div>
     </body>
 </html>
